--- a/media/style.css
+++ b/media/style.css
@@ -3323,6 +3323,53 @@ border: 3px solid #fff;
 }
 
 
+#myservicess{
+  height: 70px;
+}
+
+#myservices{
+  font-size: 1.85em;
+  line-height: 73px;
+}
+
+#servicescroll{
+  height: 50px;
+}
+
+#prevservicescroll{
+  position: absolute;
+  left: 0;
+  top:0;
+  height: 100%;
+  width: 50px;
+  background:#000;
+  cursor: pointer;
+}
+
+
+#nextservicescroll{
+  position: absolute;
+  right: 0;
+  top:0;
+  height: 100%;
+  width: 50px;
+  background:#000;
+  cursor: pointer;
+}
+
+
+#servicesdescription{
+  position: relative;
+  left: 0;
+  bottom: 0;
+  height: calc(100% - 120px);
+  width: 100%;
+  float:left;
+  background:#1a1a1a;
+
+}
+
+
 
 /*//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 
